@@ -739,7 +739,7 @@
 			$password2 	= get_request('password2', '');
 			$url 		= get_request('url','');
 			$autologin	= get_request('autologin',0);
-			$autologout	= get_request('autologout',0);
+			$autologout	= get_request('autologout',90);
 			$lang		= get_request('lang','en_gb');
 			$theme 		= get_request('theme','default.css');
 			$refresh	= get_request('refresh',30);
@@ -902,15 +902,37 @@
 
 		$frmUser->addRow(S_THEME, $cmbTheme);
 
-		$js = 'javascript: $(autologout_visible).disabled = this.checked; '.
-				' if($(autologout_visible).checked){ '.
-					'$(autologout_visible).checked = false; '.
-					' $(autologout_visible).onclick();}';
-		$chkbx_autologin = new CCheckBox('autologin', $autologin, $js, 1);
-		
-		$chkbx_autologin->addOption('autocomplete','off');
+		$chkbx_autologin = new CCheckBox("autologin", 
+											$autologin, 
+											new CScript("var autologout_visible = document.getElementById('autologout_visible');
+														var autologout = document.getElementById('autologout');
+														if (this.checked) {
+															if (autologout_visible.checked) {
+																autologout_visible.checked = false;
+																autologout_visible.onclick();
+															}
+															autologout_visible.disabled = true;
+														} else {
+															autologout_visible.disabled = false;
+														}"), 1);
+		$chkbx_autologin->AddOption('autocomplete','off');
 		$frmUser->AddRow(S_AUTO_LOGIN,	$chkbx_autologin);
-		$frmUser->AddRow(S_AUTO_LOGOUT, array(new CVisibilityBox('autologout_visible', (isset($autologout) && $autologout != 0) ? 'yes' : 'no', 'autologout', S_DISABLED), new CNumericBox("autologout", ($autologout==0)?900:$autologout, 4)));		$frmUser->AddRow(S_URL_AFTER_LOGIN,	new CTextBox("url",$url,50));		$frmUser->AddRow(S_SCREEN_REFRESH,	new CNumericBox("refresh",$refresh,4));
+		$autologoutCheckBox = new CCheckBox('autologout_visible', 
+											(isset($autologout) && $autologout != 0) ? 'yes' : 'no', 
+											new CScript("var autologout = document.getElementById('autologout');
+														if (this.checked) {
+															autologout.disabled = false;
+														} else {
+															autologout.disabled = true;
+														}"));
+		// if autologout is disabled
+		if (isset($autologout) && $autologout == 0) {
+			zbx_add_post_js('document.getElementById("autologout").disabled = true;');
+		}
+		$autologoutTextBox = new CNumericBox("autologout", ($autologout == 0) ? '90' : $autologout, 4);
+		$frmUser->AddRow(S_AUTO_LOGOUT, array($autologoutCheckBox, $autologoutTextBox));
+		$frmUser->AddRow(S_URL_AFTER_LOGIN,	new CTextBox("url",$url,50));
+		$frmUser->AddRow(S_SCREEN_REFRESH,	new CNumericBox("refresh",$refresh,4));
 
 		if(0 == $profile){
 			$frmUser->addVar('perm_details', $perm_details);
